Add Android Studio 2.3 Canary2 link

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
             </div>
         </div>
     </header>
-<div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
-        <a href="http://www.qiniu.com/products/pili?utm_campaign=zhiboyunsdk&utm_source=androiddevtools&utm_medium=advposition&utm_content=png" title="七牛直播云服务" onclick="trackOutboundLink('http://www.qiniu.com/products/pili?utm_campaign=zhiboyunsdk&utm_source=androiddevtools&utm_medium=advposition&utm_content=png', 'AD', 'click');" target="_blank">
-            <img src="http://ww1.sinaimg.cn/large/006y8mN6gw1f8v9lx2lrhj304605kdgb.jpg">
-        </a>
+    <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
+         <a href="http://www.qiniu.com/products/pili?utm_campaign=zhiboyunsdk&utm_source=androiddevtools&utm_medium=advposition&utm_content=png" title="七牛直播云服务" onclick="trackOutboundLink('http://www.qiniu.com/products/pili?utm_campaign=zhiboyunsdk&utm_source=androiddevtools&utm_medium=advposition&utm_content=png', 'AD', 'click');" target="_blank">
+             <img src="http://ww1.sinaimg.cn/large/006y8mN6gw1f8v9lx2lrhj304605kdgb.jpg">
+         </a>
     </div>
 <!--<div>
         <a href="http://www.androidweekly.cn/30-day-starter-android-dev/" onclick="trackOutboundLink('http://www.androidweekly.cn/30-day-starter-android-dev/', 'Activity', 'click');" title="Study Jams 是一个学习 Google 在线课程的活动。该活动由学员自主发起课程学习小组,带领小 组成员入门 Android 开发,最终将 Android App 上载至 Google Play 并与他人分享自己的学习历程。点击查看活动详情"  >
@@ -290,9 +290,45 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.3 Canary2-->
+                            <tr>
+                              <td rowspan="5">2.3 Canary2</td>
+                                </tr>
+                            <tr>
+                              <td rowspan="2">Windows</td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.1/android-studio-ide-162.3508619-windows.zip">android-studio-ide-162.3508619-windows.zip</a>
+                              </td>
+                              <td>408.4 MB</td>
+                              <td>360a977db4085626afd0b86ad922288dae54a654</td>
+                              <td rowspan="5"><a href="http://ww4.sinaimg.cn/large/006y8mN6gw1fa4kz4t4suj30sg0iljw1.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.1/android-studio-ide-162.3508619-windows32.zip">android-studio-ide-162.3508619-windows32.zip</a>
+                              </td>
+                              <td>408.6 MB</td>
+                              <td>269a993b494c5b3c4855854662979dca3cc6ec45</td>
+                            </tr>
+                            <tr>
+                              <td ><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.1/android-studio-ide-162.3508619-mac.zip">android-studio-ide-162.3508619-mac.dmg</a>
+                              </td>
+                              <td>409.8 MB</td>
+                              <td>195607cd3b180f3e87423932909f09545d19ba57</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.1/android-studio-ide-162.3508619-linux.zip">android-studio-ide-162.3508619-linux.zip</a>
+                              </td>
+                              <td>409.0 MB</td>
+                              <td>0decf6f0cfd7ed6c5390e50eae462c6151d2c6aa</td>
+                            </tr>
+
                             <!-- 2.3 Preview-->
                             <tr>
-                              <td rowspan="5">2.3 Preview</td>
+                              <td rowspan="5">2.3 Canary1</td>
                                 </tr>
                             <tr>
                               <td rowspan="2">Windows</td>
