Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1591,8 +1591,8 @@
                                 <td>¥1</td>
                                 <td>俊卿</td>
                                 <td>¥100</td>
-                                <td></td>
-                                <td></td>
+                                <td>爱探险的朵拉</td>
+                                <td>¥16.88</td>
                             </tr>
                         </tbody>
                     </table>
