update qiniu AD

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         </div>
     </header>
     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
-         <a href="http://www.qiniu.com/products/pili?utm_campaign=zhiboyunsdk&utm_source=androiddevtools&utm_medium=advposition&utm_content=png" title="七牛直播云服务" onclick="trackOutboundLink('http://www.qiniu.com/products/pili?utm_campaign=zhiboyunsdk&utm_source=androiddevtools&utm_medium=advposition&utm_content=png', 'AD', 'click');" target="_blank">
-             <img src="http://ww1.sinaimg.cn/large/006y8mN6gw1f8v9lx2lrhj304605kdgb.jpg">
+         <a href="http://www.qiniu.com/pricing?utm_campaign=https&utm_source=androidtools" title="七牛云HTTPS流量降价啦" onclick="trackOutboundLink('http://www.qiniu.com/pricing?utm_campaign=https&utm_source=androidtools', 'AD', 'click');" target="_blank">
+             <img src="http://ww2.sinaimg.cn/large/006y8lVagw1faaaoxn5fwj304605kaae.jpg">
          </a>
     </div>
 <!--<div>
