Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1594,6 +1594,16 @@
                                 <td>爱探险的朵拉</td>
                                 <td>¥16.88</td>
                             </tr>
+                            <tr>
+                                <td>长头发的夭怪</td>
+                                <td>¥2.33</td>
+                                <td>eiben</td>
+                                <td>¥20</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
