remove 站长统计 link

--- a/donate.html
+++ b/donate.html
@@ -1728,6 +1728,9 @@
             );
         });
     </script>
+    <script>
+        $('a[title=站长统计]').hide();
+    </script>
 </body>
 
 </html>
