--- a/index.html
+++ b/index.html
@@ -4483,6 +4483,9 @@
             );
         });
     </script>
+    <script>
+        $('a[title=站长统计]').hide();
+    </script>
 </body>
 
 </html>
