Add Android Studio 2.3 beta1 link

--- a/index.html
+++ b/index.html
@@ -290,6 +290,42 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.3 Beta1-->
+                            <tr>
+                              <td rowspan="5">2.3 Beta1</td>
+                                </tr>
+                            <tr>
+                              <td rowspan="2">Windows</td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.3/android-studio-ide-162.3573574-windows.zip">android-studio-ide-162.3573574-windows.zip</a>
+                              </td>
+                              <td>432.0 MB</td>
+                              <td>9a6f2483476798a125a9c48c19aa356898abeaf5</td>
+                              <td rowspan="5"><a href="http://ww4.sinaimg.cn/large/006tNbRwjw1favf9msor2j30us0m2gqx.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.3/android-studio-ide-162.3573574-windows32.zip">android-studio-ide-162.3573574-windows32.zip</a>
+                              </td>
+                              <td>432.5 MB</td>
+                              <td>d7fe7eab023ce7b3e4c014be4adcbe7d430e54a2</td>
+                            </tr>
+                            <tr>
+                              <td ><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.3/android-studio-ide-162.3573574-mac.zip">android-studio-ide-162.3573574-mac.dmg</a>
+                              </td>
+                              <td>432.2 MB</td>
+                              <td>e39ea7618aad4b6f7f2300250b9f74af988d06d1</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.3/android-studio-ide-162.3573574-linux.zip">android-studio-ide-162.3573574-linux.zip</a>
+                              </td>
+                              <td>432.4 MB</td>
+                              <td>d94086e4be52331c5bde7e26fa36647213b25d35</td>
+                            </tr>
+
                             <!-- 2.2.3-->
                             <tr><td rowspan="4">2.2.3</td></tr>
                             <tr>
