add donate info

--- a/donate.html
+++ b/donate.html
@@ -1599,9 +1599,9 @@
                                 <td>¥2.33</td>
                                 <td>eiben</td>
                                 <td>¥20</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
+                                <td>¥1.88</td>
+                                <td><a href="http://blog.csdn.net/chenkai19920410">Chuck</a></td>
                                 <td></td>
                             </tr>
                         </tbody>
