Add donate info

--- a/index.html
+++ b/index.html
@@ -290,6 +290,42 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.3 Beta2-->
+                            <tr>
+                              <td rowspan="5">2.3 Beta2</td>
+                                </tr>
+                            <tr>
+                              <td rowspan="2">Windows</td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.4/android-studio-ide-162.3616766-windows.zip">android-studio-ide-162.3616766-windows.zip</a>
+                              </td>
+                              <td>432.0 MB</td>
+                              <td>c546c895208b40e907e1f086dab16121cde37fc5</td>
+                              <td rowspan="5"><a href="http://ww2.sinaimg.cn/large/8a41f469gw1fbmtgy3ot0j20s70k7aez.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.4/android-studio-ide-162.3616766-windows32.zip">android-studio-ide-162.3616766-windows32.zip</a>
+                              </td>
+                              <td>432.5 MB</td>
+                              <td>d7fe7eab023ce7b3e4c014be4adcbe7d430e54a2</td>
+                            </tr>
+                            <tr>
+                              <td ><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.4/android-studio-ide-162.3616766-mac.zip">android-studio-ide-162.3616766-mac.dmg</a>
+                              </td>
+                              <td>433.2 MB</td>
+                              <td>fe78a44aeed693b4472ab5e7de7f06bab3411001</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.4/android-studio-ide-162.3616766-linux.zip">android-studio-ide-162.3616766-linux.zip</a>
+                              </td>
+                              <td>432.4 MB</td>
+                              <td>26ffeabb0e364907bea56cd1c9f1968662408488</td>
+                            </tr>
+
                             <!-- 2.3 Beta1-->
                             <tr>
                               <td rowspan="5">2.3 Beta1</td>
@@ -297,7 +333,7 @@
                             <tr>
                               <td rowspan="2">Windows</td>
                               <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.3/android-studio-ide-162.3573574-windows.zip">android-studio-ide-162.3573574-windows.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.4/android-studio-ide-162.3573574-windows.zip">android-studio-ide-162.3573574-windows.zip</a>
                               </td>
                               <td>432.0 MB</td>
                               <td>9a6f2483476798a125a9c48c19aa356898abeaf5</td>
