--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                               </td>
                               <td>432.0 MB</td>
                               <td>c546c895208b40e907e1f086dab16121cde37fc5</td>
-                              <td rowspan="5"><a href="http://ww2.sinaimg.cn/large/8a41f469gw1fbmtgy3ot0j20s70k7aez.jpg">查看</a></td>
+                              <td rowspan="5"><a href="">查看</a></td>
                             </tr>
                             <tr>
                               <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.4/android-studio-ide-162.3616766-windows32.zip">android-studio-ide-162.3616766-windows32.zip</a>
