--- a/donate.html
+++ b/donate.html
@@ -1604,6 +1604,26 @@
                                 <td><a href="http://blog.csdn.net/chenkai19920410">Chuck</a></td>
                                 <td>¥10.24</td>
                             </tr>
+                            <tr>
+                                <td>捐赠来自微信</td>
+                                <td>¥9.9</td>
+                                <td>捐赠来自微信</td>
+                                <td>¥2</td>
+                                <td>捐赠来自微信</td>
+                                <td>¥10</td>
+                                <td>捐赠来自微信</td>
+                                <td>¥1.5</td>
+                            </tr>
+                            <tr>
+                                <td>捐赠来自微信</td>
+                                <td>¥20</td>
+                                <td>benny</td>
+                                <td>¥10</td>
+                                <td>ExiaHan</td>
+                                <td>¥25</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
