Add Google Developer、Android 7.0、Android Studio binner

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
     </header>
     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
-         <a href="http://www.qiniu.com/pricing?utm_campaign=https&utm_source=androidtools" title="七牛云HTTPS流量降价啦" onclick="trackOutboundLink('http://www.qiniu.com/pricing?utm_campaign=https&utm_source=androidtools', 'AD', 'click');" target="_blank">
+         <a href="http://www.qiniu.com/pricing?utm_campaign=https&utm_source=androidtools" title="七牛云HTTPS流量降价啦" onclick="trackOutboundLink('http://www.qiniu.com/pricing?utm_campaign=https&utm_source=androidtools', 'AD-QiNiu', 'click');" target="_blank">
              <img src="http://ww2.sinaimg.cn/large/006y8lVagw1faaaoxn5fwj304605kaae.jpg">
          </a>
     </div>
@@ -190,14 +190,35 @@
                 <div class="inner">
                     <h1>Android 开发技术周报</h1>
                     <p>汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。</p>
-                    <a class="btn" href="http://www.androidweekly.cn" onclick="trackOutboundLink('http://www.androidweekly.cn', 'Activity', 'click');" title="">订阅</a>
+                    <a class="btn" href="http://www.androidweekly.cn" onclick="trackOutboundLink('http://www.androidweekly.cn', 'AndroidWeekly', 'click');" title="">去订阅</a>
                  </div>
             </li>
             <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tuy0n1fkj31jk0goq38.jpg); width: 25%;">
                 <div class="inner">
                     <h1>Material Design</h1>
                     <p>开发者参考文档</p>
-                    <a class="btn" href='http://www.materialdoc.cn' onclick="trackOutboundLink('http://www.materialdoc.cn', 'Activity', 'click');" title="">查看</a>
+                    <a class="btn" href='http://www.materialdoc.cn' onclick="trackOutboundLink('http://www.materialdoc.cn', 'Materialdoc', 'click');" title="">去看看</a>
+                 </div>
+            </li>
+            <li style="background-image: url(http://ww3.sinaimg.cn/large/006tKfTcgy1fcnsyt9wogj31jk0go409.jpg); width: 25%;">
+                <div class="inner">
+                    <h1>Android 7.0 Nougat</h1>
+                    <p>Android 牛轧糖</p>
+                    <a class="btn" href='https://developer.android.google.cn' onclick="trackOutboundLink('https://developer.android.google.cn', 'Android', 'click');" title="">去尝尝</a>
+                 </div>
+            </li>
+            <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb53o2nj31jk0gojto.jpg); width: 25%;">
+                <div class="inner">
+                    <h1 style="color: #9acd0;">Android Studio</h1>
+                    <p >官方下载 Android Studio</p>
+                    <a class="btn" href='https://developer.android.google.cn/studio/index.html' onclick="trackOutboundLink('https://developer.android.google.cn/studio/index.html', 'Android Studio', 'click');" title="">下载</a>
+                 </div>
+            </li>
+            <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb4t09jj31jk0goq4c.jpg); width: 25%;">
+                <div class="inner">
+                    <h1>Google Developers</h1>
+                    <p>官方 Google 开发者网站</p>
+                    <a class="btn" href='https://developer.google.cn' onclick="trackOutboundLink('https://developer.google.cn', 'Google Developers', 'click');" title="">去瞅瞅</a>
                  </div>
             </li>
         </ul>
