Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1619,7 +1619,7 @@
                                 <td>¥20</td>
                                 <td>benny</td>
                                 <td>¥10</td>
-                                <td>ExiaHan</td>
+                                <td><a href="https://blog.exiahan.com">ExiaHan</a></td>
                                 <td>¥25</td>
                                 <td></td>
                                 <td></td>
