Fixed link error

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="inner">
                     <h1>Google Developers</h1>
                     <p>官方 Google 开发者网站</p>
-                    <a class="btn" href='https://developer.google.cn' onclick="trackOutboundLink('https://developer.google.cn', 'Google Developers', 'click');" title="">去瞅瞅</a>
+                    <a class="btn" href='https://developers.google.cn' onclick="trackOutboundLink('https://developers.google.cn', 'Google Developers', 'click');" title="">去瞅瞅</a>
                  </div>
             </li>
         </ul>
