Added Android Studio 2.3  beta4 hash code image link

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                               </td>
                               <td>432.6 MB</td>
                               <td>c770c3180d3e2d4c120eea1944e0c4254d9f265d</td>
-                              <td rowspan="5"><a href="">查看</a></td>
+                              <td rowspan="5"><a href="https://ww1.sinaimg.cn/large/006tKfTcgy1fcoxdps5j5j30rt0i5dke.jpg">查看</a></td>
                             </tr>
                             <tr>
                               <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.6/android-studio-ide-162.3715353-windows32.zip">android-studio-ide-162.3715353-windows32.zip</a>
