--- a/donate.html
+++ b/donate.html
@@ -1621,6 +1621,16 @@
                                 <td>¥10</td>
                                 <td><a href="https://blog.exiahan.com">ExiaHan</a></td>
                                 <td>¥25</td>
+                                <td>蓝雪凌</td>
+                                <td>¥10.24</td>
+                            </tr>
+                            <tr>
+                                <td>捐赠来自微信</td>
+                                <td>¥1</td>
+                                <td>捐赠来自微信</td>
+                                <td>¥8.8</td>
+                                <td>shadow</td>
+                                <td>¥12</td>
                                 <td></td>
                                 <td></td>
                             </tr>
