Fix JDK Link Error

--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
             </div>
         </div>
     </header>
-    <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
+<!--     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
          <a href="http://www.qiniu.com/pricing?utm_campaign=https&utm_source=androidtools" title="七牛云HTTPS流量降价啦" onclick="trackOutboundLink('http://www.qiniu.com/pricing?utm_campaign=https&utm_source=androidtools', 'AD-QiNiu', 'click');" target="_blank">
              <img src="http://ww2.sinaimg.cn/large/006y8lVagw1faaaoxn5fwj304605kaae.jpg">
          </a>
-    </div>
+    </div> -->
 <!--<div>
         <a href="http://www.androidweekly.cn/30-day-starter-android-dev/" onclick="trackOutboundLink('http://www.androidweekly.cn/30-day-starter-android-dev/', 'Activity', 'click');" title="Study Jams 是一个学习 Google 在线课程的活动。该活动由学员自主发起课程学习小组,带领小 组成员入门 Android 开发,最终将 Android App 上载至 Google Play 并与他人分享自己的学习历程。点击查看活动详情"  >
             <img src='http://ww2.sinaimg.cn/large/8a41f469jw1f27y2nqh6ij21cw0iw77t.jpg' width="100%" border="0" />
@@ -1772,27 +1772,27 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td align="center">1.8 u101</td>
+                                <td align="center">1.8 u121</td>
                                 <td align="center">
-                                    <a href="https://java.com/en/download/manual.jsp">下载</a>
+                                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html">下载</a>
                                 </td>
                                 <td align="center">
-                                    <a href="https://java.com/en/download/manual.jsp">下载</a>
+                                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html">下载</a>
                                 </td>
                                 <td align="center">
-                                    <a href="https://java.com/en/download/manual.jsp">下载</a>
+                                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html">下载</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td align="center">1.7 u80</td>
                                 <td align="center">
-                                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">下载</a>
+                                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html#jdk-7u80-oth-JPR">下载</a>
                                 </td>
                                 <td align="center">
-                                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">下载</a>
+                                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html#jdk-7u80-oth-JPR">下载</a>
                                 </td>
                                 <td align="center">
-                                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">下载</a>
+                                    <a href="http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html#jdk-7u80-oth-JPR">下载</a>
                                 </td>
                             </tr>
                             <tr>
