Fix git 2.8.1 link error

--- a/index.html
+++ b/index.html
@@ -1961,10 +1961,10 @@
                                     <tr>
                                         <td align="left">Git-2.8.1</td>
                                         <td align="center">
-                                            <a href="http://pan.baidu.com/s/1slF2cMT">下载</a>
+                                            <a href="https://pan.baidu.com/s/1qXOlwhm">下载</a>
                                         </td>
                                         <td align="center">
-                                            <a href="http://pan.baidu.com/s/1slF2cMT">下载</a>
+                                            <a href="https://pan.baidu.com/s/1cpcoDg">下载</a>
                                         </td>
                                         <td align="center">
                                             <a href="https://github.com/inferjay/AndroidDevTools/wiki/Download-for-Linux-and-Unix">下载</a>
