add git 2.12.0 link

--- a/index.html
+++ b/index.html
@@ -1959,6 +1959,18 @@
                                 </thead>
                                 <tbody>
                                     <tr>
+                                        <td align="left">Git-2.12.0</td>
+                                        <td align="center">
+                                            <a href="https://github.com/git-for-windows/git/releases/">下载</a>
+                                        </td>
+                                        <td align="center">
+                                            <a href="https://sourceforge.net/projects/git-osx-installer/files/">下载</a>
+                                        </td>
+                                        <td align="center">
+                                            <a href="https://github.com/inferjay/AndroidDevTools/wiki/Download-for-Linux-and-Unix">下载</a>
+                                        </td>
+                                    </tr>
+                                    <tr>
                                         <td align="left">Git-2.8.1</td>
                                         <td align="center">
                                             <a href="https://pan.baidu.com/s/1qXOlwhm">下载</a>
@@ -1968,24 +1980,6 @@
                                         </td>
                                         <td align="center">
                                             <a href="https://github.com/inferjay/AndroidDevTools/wiki/Download-for-Linux-and-Unix">下载</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td align="left">Git-2.0.1</td>
-                                        <td align="center">
-                                        </td>
-                                        <td align="center"><a href="http://pan.baidu.com/s/1slF2cMT">下载</a>
-                                        </td>
-                                        <td align="center"><a href="https://github.com/inferjay/AndroidDevTools/wiki/Download-for-Linux-and-Unix">下载</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td align="left">Git-1.9.4</td>
-                                        <td align="center"><a href="http://pan.baidu.com/s/1slF2cMT">下载</a>
-                                        </td>
-                                        <td align="center">
-                                        </td>
-                                        <td align="center"><a href="https://github.com/inferjay/AndroidDevTools/wiki/Download-for-Linux-and-Unix">下载</a>
                                         </td>
                                     </tr>
                                     <tr>
