close ad function

--- a/index.html
+++ b/index.html
@@ -4589,7 +4589,7 @@
             document.all.ad_right_float.style.top = top;
 			lastScrollY = lastScrollY + percent;
 		}
-        window.setInterval("heartBeat()",1);
+        // window.setInterval("heartBeat()",1);
 	</script>
     <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
     <script type="text/javascript">
