--- a/donate.html
+++ b/donate.html
@@ -1634,6 +1634,26 @@
                                 <td>周*涛</td>
                                 <td>¥1</td>
                             </tr>
+                            <tr>
+                                <td>捐赠来自微信</td>
+                                <td>¥8</td>
+                                <td>捐赠来自微信</td>
+                                <td>¥1.32</td>
+                                <td>捐赠来自微信</td>
+                                <td>¥1.24</td>
+                                <td>外向的孤独患者2002</td>
+                                <td>¥10</td>
+                            </tr>
+                            <tr>
+                                <td>小江</td>
+                                <td>¥15</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
