Add Android Studio 2.3 link

--- a/index.html
+++ b/index.html
@@ -289,6 +289,37 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.3-->
+                            <tr>
+                                <td rowspan="4">2.3 正式版</td>
+                            </tr>
+                            <tr>
+                                <td>Windows</td>
+                                <td align="left">
+                                    <a href="https://developer.android.google.cn/studio/index.html">android-studio-bundle-162.3764568-windows.exe</a>
+                                </td>
+                                <td>1848 MB</td>
+                                <td>39fb0a0caa033b31a3bcce1ac44b284f6673ad59e65d5fd03bc85b7e105e49d0</td>
+                                <td rowspan="4"><a href="https://developer.android.google.cn/studio/index.html">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a href="https://developer.android.google.cn/studio/index.html">android-studio-ide-162.3764568-mac.dmg</a>
+                                </td>
+                                <td>424 MB</td>
+                                <td>8af8ab413700d0b49ce760412919c0153bccb1295e93342953d850ff4397a58f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://developer.android.google.cn/studio/index.html">android-studio-ide-162.3764568-linux.zip</a>
+                                </td>
+                                <td>428 MB</td>
+                                <td>214cee47ef7a628c712ae618f5aab6c2a56a72aa479a50937d4cad5a0abf8435</td>
+                            </tr>
                             <!-- 2.3 RC1-->
                             <tr>
                                 <td rowspan="5">2.3 RC1</td>
